devel
-----

* Add `storedValues` support for vector indexes. This allows storing additional
  document fields directly in the vector index, enabling optimized filtered
  vector queries when all filter attributes are covered by stored values. The
  query optimizer can now avoid fetching full documents when all required
  fields are available in the index.

* Ensure the js/node/package.json and js/node/package-lock.json have correct
  versions of the included node packages.

* Fix Swagger UI missing generated data.

* Updated ArangoDB Starter to v0.19.14.

* Ignore flag --cluster.upgrade on DBservers, since it only concerns coordinators.
  This fixes a clash with --database.auto-upgrade which can lead to problems during
  an upgrade on DBservers.

* Rebuilt included rclone v1.65.2 with go1.24.9 and non-vulnerable
  dependencies.

* Update tzdata as of 05.11.2025.

* Updated bundled version of Snappy library to 1.2.2. It fixes an ALUBSAN
  issue found in ARM64.

* Fix ES-2722 and COR-1: If an AQL query using ArangoSearch goes out of memory
  due to the search node materializing a document, the server would crash.

* Improved performance of INSERT operations in smart graph edge collections by
  optimizing data distribution. The MAKE_DISTRIBUTE_INPUT_WITH_KEY_CREATION
  function now has a new option `projectOnlyId` which, when enabled, only sends
  necessary identifiers (_key, _from, _to) to dbservers instead of sending full
  documents, reducing network overhead during distributed operations.


3.12.6 (2025-10-22)
-------------------

* Added automatic authentication via /_open/auth to client tools as well as
  automatic JWT token renewals. Made the expiry time of the generated JWT token
  configurable (within the boundaries of the new options
  --auth.minimal-jwt-expiry-time and --auth.maximal-jwt-expiry-time).
  This is needed for SSO on the platform to work with client tools.

* FE-825: add new logo, update colors based on new branding.
