@@ -25,6 +25,11 @@
 #include "Basics/StringUtils.h"
 #include "Basics/operating-system.h"
 #include "Basics/files.h"
+#include "Basics/FileUtils.h"
+#include "Basics/CGroupDetection.h"
+#include "Logger/LogMacros.h"
+#include "Logger/Logger.h"
+#include "Logger/LoggerStream.h"
 
 #ifdef TRI_HAVE_UNISTD_H
 #include <unistd.h>
@@ -33,6 +38,7 @@
 #include <cstdint>
 #include <string>
 #include <thread>
+#include <sstream>
 
 using namespace arangodb;
 
@@ -54,21 +60,72 @@ std::size_t numberOfCoresImpl() {
   return static_cast<std::size_t>(std::thread::hardware_concurrency());
 }
 
+std::size_t numberOfEffectiveCoresImpl() {
+  auto const cgroup = cgroup::getVersion();
+  int64_t quota = -1;
+  int64_t period = -1;
+
+  switch (cgroup) {
+    case cgroup::Version::NONE: {
+      break;
+    }
+    case cgroup::Version::V1: {
+      auto quota = arangodb::basics::FileUtils::readCgroupFileValue(
+          "/sys/fs/cgroup/cpu/cpu.cfs_quota_us");
+      auto period = arangodb::basics::FileUtils::readCgroupFileValue(
+          "/sys/fs/cgroup/cpu/cpu.cfs_period_us");
+      if (quota && period) {
+        if (*quota > 0 && *period > 0) {
+          return *quota / *period;
+        }
+      }
+      break;
+    }
+    case cgroup::Version::V2: {
+      try {
+        std::string content =
+            arangodb::basics::FileUtils::slurp("/sys/fs/cgroup/cpu.max");
+        std::istringstream stream(content);
+        std::string quotaStr, periodStr;
+        stream >> quotaStr >> periodStr;
+        if (quotaStr != "max" && !quotaStr.empty() && !periodStr.empty()) {
+          quota = std::stoll(quotaStr);
+          period = std::stoll(periodStr);
+          return quota / period;
+        }
+      } catch (std::exception const& ex) {
+        LOG_TOPIC("a3c23", ERR, arangodb::Logger::FIXME)
+            << "failed to read cgroup v2 cpu.max file: " << ex.what();
+      } catch (...) {
+        LOG_TOPIC("a3c24", ERR, arangodb::Logger::FIXME)
+            << "failed to read cgroup v2 cpu.max file: unknown error";
+      }
+      break;
+    }
+  }
+
+  return numberOfCoresImpl();
+}
+
 struct NumberOfCoresCache {
-  NumberOfCoresCache() : cachedValue(numberOfCoresImpl()), overridden(false) {
+  NumberOfCoresCache()
+      : cpuCores(numberOfCoresImpl()),
+        effectiveCpuCores(numberOfEffectiveCoresImpl()),
+        overridden(false) {
     std::string value;
     if (TRI_GETENV("ARANGODB_OVERRIDE_DETECTED_NUMBER_OF_CORES", value)) {
       if (!value.empty()) {
         uint64_t v = arangodb::basics::StringUtils::uint64(value);
         if (v != 0) {
-          cachedValue = static_cast<std::size_t>(v);
+          cpuCores = static_cast<std::size_t>(v);
           overridden = true;
         }
       }
     }
   }
 
-  std::size_t cachedValue;
+  std::size_t cpuCores;
+  std::size_t effectiveCpuCores;
   bool overridden;
 };
 
@@ -77,7 +134,11 @@ NumberOfCoresCache const cache;
 }  // namespace
 
 /// @brief return number of cores from cache
-std::size_t arangodb::NumberOfCores::getValue() { return ::cache.cachedValue; }
+std::size_t arangodb::NumberOfCores::getValue() { return ::cache.cpuCores; }
+
+std::size_t arangodb::NumberOfCores::getEffectiveValue() {
+  return ::cache.effectiveCpuCores;
+}
 
 /// @brief return if number of cores was overridden
 bool arangodb::NumberOfCores::overridden() { return ::cache.overridden; }
