@@ -30,6 +30,12 @@ namespace PhysicalMemory {
 
 /// @brief return system's physical memory
 uint64_t getValue();
+
+/// @brief return effective available memory
+/// value will be affected by limitations of docker,
+/// cGroupV1 and cGroupV2
+std::size_t getEffectiveValue();
+
 bool overridden();
 
 }  // namespace PhysicalMemory
