@@ -1,6 +1,9 @@
 devel
 -----
 
+* COR-5: Added resource metrics effective CPU cores, effective physical
+  memory, and cgroup version detection.
+
 * Add `storedValues` support for vector indexes. This allows storing additional
   document fields directly in the vector index, enabling optimized filtered
   vector queries when all filter attributes are covered by stored values. The
